# cmake_cpp_vim

./: CMakeLists.txt  LICENSE  README.md
include/: Config.h  Config.h.in
src/: main.cpp
vim/: .vimrc
